--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
-    "gulp": "^3.9.1",
+    "gulp": "4.0.2",
     "gulp-typescript": "^5.0.0-alpha.3",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
